// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should render and match snapshot when open 1`] = `
Array [
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 256px;
  background-color: #212933;
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  -webkit-transition: transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
  position: absolute;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

<div
    className="circuit-0 circuit-1"
    open={true}
  />,
  .circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: visible;
  opacity: 0.56;
  z-index: 0;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
    className="circuit-0 circuit-1"
  />,
  .circuit-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: visible;
  opacity: 1;
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
    className="circuit-0 circuit-1"
    onClick={[MockFunction]}
  >
    <div>
      closeIcon.svg
    </div>
  </button>,
]
`;

exports[`<Sidebar /> should render and match the snapshot when closed 1`] = `
Array [
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  width: 256px;
  background-color: #212933;
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  -webkit-transition: transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
  position: absolute;
  -webkit-transform: translateX(-256px);
  -ms-transform: translateX(-256px);
  transform: translateX(-256px);
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

<div
    className="circuit-0 circuit-1"
    open={false}
  />,
  .circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 0;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
    className="circuit-0 circuit-1"
  />,
  .circuit-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
    className="circuit-0 circuit-1"
    onClick={[MockFunction]}
  >
    <div>
      closeIcon.svg
    </div>
  </button>,
]
`;
